--- a/.github/workflows/projects.yml
+++ b/.github/workflows/projects.yml
@@ -37,5 +37,6 @@ jobs:
           path: ${{ matrix.project.folder }}
 
       - name: Compile ${{ matrix.project.repository }}
+        continue-on-error: true
         run: pio run -d ${{ matrix.project.config_dir }} -e ${{ matrix.project.env_name }} -e ${{ matrix.project.env_name }}
 
