--- a/tox.ini
+++ b/tox.ini
@@ -27,11 +27,12 @@ passenv = *
 usedevelop = True
 deps =
     black
+    codespell
     isort
+    jsondiff
     pylint
     pytest
     pytest-xdist
-    jsondiff
 commands =
     {envpython} --version
     pio system info
