--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -27,6 +27,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
 
+      - name: Run "codespell" on Linux
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          python -m pip install codespell
+          make codespell
+
       - name: Core System Info
         run: |
           tox -e py
