--- a/.github/workflows/projects.yml
+++ b/.github/workflows/projects.yml
@@ -28,8 +28,14 @@ jobs:
         with:
           python-version: 3.13
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
+          enable-cache: false
+
       - name: Install PlatformIO
-        run: pip install -U .
+        run: uv pip install --system -U .
 
       - name: Check out ${{ matrix.project.repository }}
         uses: actions/checkout@v4
