Ignore:'protected_args' is deprecated and will be removed in Click 9.0:DeprecationWarning

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,8 @@ filterwarnings =
     error
     # Bottle
     ignore:.*'cgi' is deprecated and slated for removal
+    ignore:'protected_args' is deprecated and will be removed in Click 9.0:DeprecationWarning
+
 
 [testenv]
 passenv = *
