--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -33,9 +33,16 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           # Free space
-          sudo apt clean
-          # docker rmi $(docker image ls -aq)
+          echo "Listing 50 largest packages"
+          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n | tail -n 50
           df -h
+          sudo rm -rf /opt/hostedtoolcache
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo apt clean
+          docker system prune -af
+          df -h
+
           tox -e testexamples
 
       - name: Run on macOS
